--- a/client/src/Style/Style.css
+++ b/client/src/Style/Style.css
@@ -1,5 +1,6 @@
-main{
-margin: 0;
+main {
+  padding-top: 8px;
+  place-items: center; /* Center the items vertically and horizontally */
 }
 
 body{
@@ -12,24 +13,93 @@ header{
     width: 100%;
     background-color: #eee;
     height: 2%;
+    padding-top: 10px;
+    margin-top: 10px;
+    padding-bottom: 10px;
 }
+
+  .SignIn {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 20px;
+  }
+  
+  .SignIn a {
+    margin-left: 10px;
+  }
+
+.login{
+    border: solid black;
+  border-width: 2px 2px 2px 2px;
+  border-radius: 8px;
+  font-size: 18px;
+  padding: 10px;
+  maright-right: 5px;
+  color: #FF4E8E;
+  background-color: #eee;
+  text-underline-offset: 5px;
+}
+
+.login:hover{
+background-color: #2EFFB6;
+
+}
+
+.signup{
+  border: solid black;
+  border-width: 2px 2px 2px 2px;
+  border-radius: 8px;
+  font-size: 18px;
+  padding: 10px;
+  color: #FF4E8E;
+  background-color: #eee;
+  text-underline-offset: 5px;
+}
+
+.signup:hover{
+  background-color: #2EFFB6;
+}
+
 
 .Navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
-  padding: 10px;
+  padding: 0px;
   background-color: #eee;
+}
+
+@media (max-width: 768px) {
+  /* Styles for screens smaller than 768px */
+  .Navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    margin: 0px;
+  }
+
+  .navbar-link {
+    margin: 10px 0;
+  }
 }
 
 .navbar-link {
   margin: 0 10px;
   border: solid black;
   border-width: 2px 2px 2px 2px;
+  border-radius: 8px;
   font-size: 24px;
   padding: 10px;
   color: #FF4E8E;
+  background-color: #eee;
+  text-underline-offset: 5px;
+}
+
+.navbar-link:hover{
   background-color: #2EFFB6;
 }
 .break{
@@ -38,20 +108,61 @@ header{
   margin-top: 0px;
 }
 
-.title{
-    justify-content: center;
+.title {
+  justify-content: center;
+  text-align: center;
+  color: rgb(0, 0, 0);
+  font-size: 60px;
+  width: 60%;
+  margin: 0 auto;
+  max-width: 100%;
+  display: block;
+}
+
+
+/* body of page */
+
+h1{
+margin-bottom: 0px;
 text-align: center;
-color: rgb(0, 0, 0);
-font-size: 60px;
-width: 100%;
 }
 
-.motto{
-    color: rgb(0, 0, 0);
-    text-align: center;
-    font-size: 30px;
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+  margin-top: 20px; /* Add margin-top to create space below the header */
+  margin-left: 20px;
+  margin-right: 20px;
+  border-radius: 8px;
+  background-color: #eee;
 }
 
+
+/* card styling */
+.card img {
+  max-width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+
+}
+
+.card h2 {
+  margin-top: 10px;
+  text-align: center;
+}
+
+.card p {
+  margin-top: 5px;
+  text-align: center;
+}
+
+.card button {
+  margin-top: 10px;
+}
 
 /* Social Footer Style */
 
@@ -64,7 +175,6 @@ width: 100%;
     flex-direction: column;
     align-items: center;
     background-color: #eee;
-    padding: 25px 50px;
   }
   
   .follow-text {
