--- a/client/src/Style/Style.css
+++ b/client/src/Style/Style.css
@@ -4,11 +4,10 @@ max-height: 100%;
 margin-bottom: 25px;
 padding-bottom: 100px;
 }
-
 body {
   margin: 0;
   background-color: #616161;
- position: static;
+  position: static;
   min-height: 100%; /* Set minimum height of the body to 100% viewport height */
 }
 
@@ -23,38 +22,22 @@ header {
   padding-bottom: 10px;
 }
 
-
 /* Sign In / Sign Up / Sign Out */
+
 .SignIn {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-right: 20px;
+  margin-right: 10px;
+  flex-wrap: no;
 }
 
 .SignIn a {
   margin-left: 10px;
+  margin-right: 10px;
 }
 
-.login {
-  border: solid black;
-  border-width: 2px 2px 2px 2px;
-  border-radius: 8px;
-  font-size: 18px;
-  padding: 10px;
-  margin-right: 5px;
-  color: #FF4E8E;
-  background-color: #616161;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.login:hover {
-  background-color: #2EFFB6;
-  text-underline-offset: 5px;
-  text-decoration: underline;
-}
-
+.login,
 .signup {
   border: solid black;
   border-width: 2px 2px 2px 2px;
@@ -66,12 +49,25 @@ header {
   text-decoration: none;
   font-weight: bold;
 }
-
+a.signup{
+  padding: 10px;
+}
+.login:hover,
 .signup:hover {
   background-color: #2EFFB6;
   text-underline-offset: 5px;
   text-decoration: underline;
+}
 
+.title {
+  justify-content: center;
+  text-align: center;
+  color: rgb(0, 0, 0);
+  font-size: 60px;
+  width: 60%;
+  margin: 0 auto;
+  max-width: 100%;
+  display: block;
 }
 
 
@@ -156,20 +152,32 @@ a.Username {
 
 
 .form-submit {
-  width: 40%;
+  width: 100%;
   max-width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 48px;
+  font-size: 40px;
   border-radius: 35px;
   color: #005139;
   background-color: #ccc;
+  padding: 10px;
 }
 
 .form-submit:hover{
   background-color: #2EFFB6;
   color: black;
+}
+.form-input-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.form-submit-wrapper {
+  display: flex;
+  justify-content: center;
 }
 .error-message {
   /* Add styles for the error message as needed */
@@ -195,16 +203,69 @@ a.Username {
   /* Maintain the image's aspect ratio */
 
 }
+.dropdown-container {
+  position: relative;
+  display: inline-block;
+}
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-button {
+  border: solid black;
+  border-width: 2px 2px 2px 2px;
+  border-radius: 8px;
+  font-size: 18px;
+font-family: 'Times New Roman', Times, serif;  padding: 10px;
+  color: #FF4E8E;
+  background-color: #616161;
+  text-decoration: none;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #616161;
+  min-width: 160px;
+  z-index: 1;
+  left: 0;
+  margin-top: 10px;
+  
+}
+.dropdown.open .dropdown-content {
+  display: block;
+  
+}
+
+.dropdown-content a {
+  color: #FF4E8E;
+  text-decoration: none;
+  display: block;
+  margin-top: 5px;
+}
+
+.dropdown-content a:hover {
+  background-color: #2EFFB6;
+  text-underline-offset: 5px;
+  text-decoration: underline;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 .Navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start; /* Change to 'flex-start' to align the Navbar to the left */
   align-items: center;
   margin-top: 8px;
-  margin-left: auto;
-  margin-right: auto;
   margin-bottom: 8px;
-  width: 50%;
+  width: 100%;
   padding: 0px;
   background-color: #616161;
 }
@@ -360,7 +421,8 @@ h1 {
 
 
 .RemoveShoe:hover{
-  background-color: #2EFFB6;
+  color: white;
+  background-color: #FF4E8E;
   text-underline-offset: 5px;
   text-decoration: underline;
 
@@ -480,3 +542,89 @@ transition: 0.5s;
 .instagram {
   color: black;
 }
+
+
+/*  */
+
+@media (max-width: 767px) {
+  .Header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .SignIn {
+    margin-bottom: 10px;
+  }
+
+  .title {
+    margin-top: 10px;
+    width: 80%;
+  }
+  .form-submit{
+    font-size: 36px;
+  }
+}
+
+@media (max-width: 479px) {
+  .Header {
+    padding-top: 3px;
+    padding-bottom: 3px;
+  }
+
+  .title {
+    width: 90%;
+  }
+  .form-submit{
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 319px) {
+  .Header {
+    padding-top: 2px;
+    padding-bottom: 2px;
+  }
+
+  .title {
+    width: 95%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .Username {
+    display: none;
+  }
+}
+@media (max-width: 1024px) {
+.logo{
+  width: 0%;
+}
+
+  .logo img {
+    display: none;
+  }
+
+  .left-form {
+    width: 80%;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .card {
+    flex-direction: column;
+    /* Align items and text to the center */
+    align-items: center;
+    text-align: center;
+  }
+}
+
+h2{
+  text-align: center;
+}
+
