--- a/client/src/Style/Style.css
+++ b/client/src/Style/Style.css
@@ -42,12 +42,33 @@ header {
   border: solid black;
   border-width: 2px 2px 2px 2px;
   border-radius: 8px;
-  font-size: 18px;
+  font-size: 28px;
   padding: 10px;
   color: #FF4E8E;
   background-color: #616161;
   text-decoration: none;
   font-weight: bold;
+}
+
+@media (max-width: 1500px) {
+  .login,
+  .signup {
+    font-size: 26px;
+  }
+}
+
+@media (max-width: 768px) {
+  .login,
+.signup {
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 479px) {
+  .login,
+  .signup {
+    font-size: 16px;
+  }
 }
 a.signup{
   padding: 10px;
@@ -118,6 +139,7 @@ a.Username {
   justify-content: center;
   height: 100%;
   margin: 0 auto;
+  margin-bottom: 125px;
 }
 
 .form-div {
@@ -125,23 +147,54 @@ a.Username {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 4rem;
+  gap: 5rem;
   width: 100%;
   max-width: 100%;
 }
 
 .form-title {
-  margin-bottom: 1rem;
+  margin-bottom: 4rem;
   text-align: center;
   font-size: 48px;
   color: #FF4E8E;
+}
+
+.form-title {
+  margin-bottom: 4rem;
+  text-align: center;
+  font-size: 48px;
+  color: #FF4E8E;
+}
+
+@media (max-width: 1024px) {
+  .form-title {
+    font-size: 40px;
+    margin-bottom: 3rem;
+
+  }
+}
+
+@media (max-width: 768px) {
+  .form-title {
+    font-size: 36px;
+    margin-bottom: 2rem;
+
+  }
+}
+
+@media (max-width: 479px) {
+  .form-title {
+    font-size: 30px;
+    margin-bottom: 2rem;
+
+  }
 }
 
 .form-input {
   margin-bottom: 1rem;
   width: 100%;
   max-width: 100%;
-  font-size: 48px;
+  font-size: 36px;
   background-color: #ccc;
   border-radius: 35px;
   text-align: center;
@@ -157,11 +210,10 @@ a.Username {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 40px;
+  font-size: 36px;
   border-radius: 35px;
   color: #005139;
   background-color: #ccc;
-  padding: 10px;
 }
 
 .form-submit:hover{
@@ -218,13 +270,31 @@ a.Username {
   border: solid black;
   border-width: 2px 2px 2px 2px;
   border-radius: 8px;
-  font-size: 18px;
+  font-size: 28px;
 font-family: 'Times New Roman', Times, serif;  padding: 10px;
   color: #FF4E8E;
   background-color: #616161;
   text-decoration: none;
   font-weight: bold;
   cursor: pointer;
+}
+
+@media (max-width: 1024px) {
+  .dropdown-button {
+    font-size: 26px;
+  }
+}
+
+@media (max-width: 768px) {
+  .dropdown-button {
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 479px) {
+  .dropdown-button {
+    font-size: 16px;
+  }
 }
 
 .dropdown-content {
@@ -378,7 +448,7 @@ h1 {
 }
 
 .button-wrapper button {
-  margin: 0 5px;
+  margin: 0 20px;
   /* Add margin to create space between the buttons */
 }
 
@@ -428,23 +498,121 @@ h1 {
 
 }
 
+.PageMotto{
+  font-size: 48px;
+}
+
+.PageMotto {
+  font-size: 48px;
+}
+
+@media (max-width: 1500px) {
+  .PageMotto {
+    /* Adjust the font size for the specific media query if needed */
+    font-size: 44px;
+  }
+}
+
+@media (max-width: 768px) {
+  .PageMotto {
+    /* Adjust the font size for the specific media query if needed */
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 479px) {
+  .PageMotto {
+    /* Adjust the font size for the specific media query if needed */
+    font-size: 22px;
+  }
+}
+
+.currentShoe{
+  font-size: 48px;
+}
+
+@media (max-width: 1500px) {
+  .currentShoe {
+    /* Adjust the font size for the specific media query if needed */
+    font-size: 44px;
+  }
+}
+
+@media (max-width: 768px) {
+  .currentShoe {
+    /* Adjust the font size for the specific media query if needed */
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 479px) {
+  .currentShoe {
+    /* Adjust the font size for the specific media query if needed */
+    font-size: 22px;
+  }
+}
 
 .Price {
-  font-size: 20px;
+  font-size: 48px;
   font-weight: bold;
 }
+
+@media (max-width: 1500px) {
+  .Price {
+    /* Adjust the font size for the specific media query if needed */
+    font-size: 44px;
+  }
+}
+
+@media (max-width: 768px) {
+  .Price {
+    /* Adjust the font size for the specific media query if needed */
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 479px) {
+  .Price {
+    /* Adjust the font size for the specific media query if needed */
+    font-size: 22px;
+  }
+}
+
+
+
 
 .like-count {
-  font-size: 20px;
+  font-size: 36px;
   font-weight: bold;
 }
+@media (max-width: 1500px) {
+  .like-count {
+    /* Adjust the font size for the specific media query if needed */
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 768px) {
+  .like-count {
+    /* Adjust the font size for the specific media query if needed */
+    font-size: 28px;
+  }
+}
+
+@media (max-width: 479px) {
+  .like-count {
+    /* Adjust the font size for the specific media query if needed */
+    font-size: 20px;
+  }
+}
+
 
 .Love {
-  margin: 0 10px;
+  margin: 0 20px;
   border: solid black;
   border-width: 2px 2px 2px 2px;
   border-radius: 8px;
-  font-size: 24px;
+  font-size: 30px;
   padding: 10px;
   color: #3ecaa8;
   background-color: #616161;
@@ -457,11 +625,11 @@ h1 {
 }
 
 .Hate {
-  margin: 0 10px;
+  margin: 0 20px;
   border: solid black;
   border-width: 2px 2px 2px 2px;
   border-radius: 8px;
-  font-size: 24px;
+  font-size: 30px;
   padding: 10px;
   color: #FF4E8E;
   background-color: #616161;
@@ -490,6 +658,7 @@ h1 {
   align-items: center;
   background-color: #616161;
 margin-top: 50px;
+padding-left: ;
 opacity: 0;
 transition: 0.5s;
 }
@@ -507,12 +676,44 @@ transition: 0.5s;
   font-size: 24px;
   margin-bottom: 10px;
 }
+@media (max-width: 1024px) {
+  .follow-text{
+    font-size: 26px;
+  }
+}
+
+@media (max-width: 768px) {
+  .follow-text {
+    font-size: 26px;
+  }
+}
+
+@media (max-width: 479px) {
+  .follow-text{
+    font-size: 20px;
+  }
+}
 
 .social-icons {
   display: flex;
   justify-content: center;
   align-items: flex-end;
   margin-top: 10px;
+}
+@media (max-width: 1000px) {
+  .social-icons a {
+    font-size: 20px; /* Adjust the font size for screens smaller than 768px */
+  }
+}
+@media (max-width: 767px) {
+  .social-icons a {
+    font-size: 16px; /* Adjust the font size for screens smaller than 768px */
+  }
+}
+  @media (max-width: 500px) {
+    .social-icons a {
+      font-size: 10px; /* Adjust the font size for screens smaller than 768px */
+    }
 }
 
 .social {
@@ -521,6 +722,11 @@ transition: 0.5s;
   transform: translateY(0);
   text-align: center;
   display: inline-block;
+}
+@media (max-width: 500px) {
+  .social {
+    margin: 0 1rem;
+  }
 }
 
 .social:hover {
@@ -565,8 +771,12 @@ transition: 0.5s;
     margin-top: 10px;
     width: 80%;
   }
+.form-input{
+  font-size: 30px;
+}
+
   .form-submit{
-    font-size: 36px;
+    font-size: 30px;
   }
 }
 
@@ -578,6 +788,17 @@ transition: 0.5s;
 
   .title {
     width: 90%;
+  }
+
+  .form-title{
+    padding-bottom: 0px;
+  }
+
+  .form-div {
+    gap: 3rem;
+  }
+  .form-input{
+    font-size: 24px;
   }
   .form-submit{
     font-size: 24px;
