--- a/client/src/Style/Style.css
+++ b/client/src/Style/Style.css
@@ -189,6 +189,9 @@ a.Username {
 
   }
 }
+.form-submit{
+  padding: 1px 2px;
+}
 
 .form-input {
   margin-bottom: 1rem;
@@ -305,6 +308,8 @@ font-family: 'Times New Roman', Times, serif;  padding: 10px;
   z-index: 1;
   left: 0;
   margin-top: 10px;
+  border:solid #616161;
+  border-radius: 8px;
   
 }
 .dropdown.open .dropdown-content {
@@ -365,6 +370,12 @@ font-family: 'Times New Roman', Times, serif;  padding: 10px;
   color: #FF4E8E;
   background-color: #616161;
   text-decoration: none;
+}
+
+@media (max-width: 700px) {
+  .navbar-link{
+    font-size: 14px;
+  }
 }
 
 .navbar-link:hover {
