--- a/client/src/Style/Style.css
+++ b/client/src/Style/Style.css
@@ -1,9 +1,3 @@
-main {
-  place-items: center;
-max-height: 100%;
-margin-bottom: 25px;
-padding-bottom: 100px;
-}
 body {
   margin: 0;
   background-color: #616161;
@@ -11,7 +5,14 @@ body {
   min-height: 100%; /* Set minimum height of the body to 100% viewport height */
 }
 
-/* Header */
+main {
+  place-items: center;
+  max-height: 100%;
+  margin-bottom: 25px;
+  padding-bottom: 100px;
+}
+
+/* Header Styles */
 
 header {
   width: 100%;
@@ -22,14 +23,12 @@ header {
   padding-bottom: 10px;
 }
 
-/* Sign In / Sign Up / Sign Out */
-
 .SignIn {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   margin-right: 10px;
-  flex-wrap: no;
+  flex-wrap: nowrap;
 }
 
 .SignIn a {
@@ -44,7 +43,7 @@ header {
   border-radius: 8px;
   font-size: 28px;
   padding: 10px;
-  color: #FF4E8E;
+  color: #ff4e8e;
   background-color: #616161;
   text-decoration: none;
   font-weight: bold;
@@ -59,7 +58,7 @@ header {
 
 @media (max-width: 768px) {
   .login,
-.signup {
+  .signup {
     font-size: 22px;
   }
 }
@@ -70,12 +69,14 @@ header {
     font-size: 16px;
   }
 }
-a.signup{
+
+a.signup {
   padding: 10px;
 }
+
 .login:hover,
 .signup:hover {
-  background-color: #2EFFB6;
+  background-color: #2effb6;
   text-underline-offset: 5px;
   text-decoration: underline;
 }
@@ -91,24 +92,19 @@ a.signup{
   display: block;
 }
 
-
 a.Username {
   margin: 3px;
-
 }
-
 
 .Username {
   font-size: 18px;
   font-weight: bold;
 }
 
-
 .Username:visited {
   font-size: 18px;
-  color: #2EFFB6;
+  color: #2effb6;
 }
-
 
 .logout {
   border: solid black;
@@ -116,14 +112,16 @@ a.Username {
   border-radius: 8px;
   font-size: 18px;
   padding: 10px;
-  color: #FF4E8E;
+  color: #ff4e8e;
   background-color: #616161;
   text-underline-offset: 5px;
 }
 
 .logout:hover {
-  background-color: #2EFFB6;
+  background-color: #2effb6;
 }
+
+/* Container Styles */
 
 .container {
   display: flex;
@@ -156,21 +154,13 @@ a.Username {
   margin-bottom: 4rem;
   text-align: center;
   font-size: 48px;
-  color: #FF4E8E;
-}
-
-.form-title {
-  margin-bottom: 4rem;
-  text-align: center;
-  font-size: 48px;
-  color: #FF4E8E;
+  color: #ff4e8e;
 }
 
 @media (max-width: 1024px) {
   .form-title {
     font-size: 40px;
     margin-bottom: 3rem;
-
   }
 }
 
@@ -178,7 +168,6 @@ a.Username {
   .form-title {
     font-size: 36px;
     margin-bottom: 2rem;
-
   }
 }
 
@@ -186,10 +175,10 @@ a.Username {
   .form-title {
     font-size: 30px;
     margin-bottom: 2rem;
-
   }
 }
-.form-submit{
+
+.form-submit {
   padding: 1px 2px;
 }
 
@@ -202,10 +191,10 @@ a.Username {
   border-radius: 35px;
   text-align: center;
 }
+
 .form-input:focus {
   outline: none; /* Remove the outline when the input is focused */
 }
-
 
 .form-submit {
   width: 100%;
@@ -219,10 +208,11 @@ a.Username {
   background-color: #ccc;
 }
 
-.form-submit:hover{
-  background-color: #2EFFB6;
+.form-submit:hover {
+  background-color: #2effb6;
   color: black;
 }
+
 .form-input-wrapper {
   display: flex;
   flex-direction: column;
@@ -234,6 +224,7 @@ a.Username {
   display: flex;
   justify-content: center;
 }
+
 .error-message {
   /* Add styles for the error message as needed */
   margin-top: 1rem;
@@ -256,13 +247,14 @@ a.Username {
   /* Ensure the image scales with the container */
   height: auto;
   /* Maintain the image's aspect ratio */
-
 }
+
+/* Dropdown Styles */
+
 .dropdown-container {
   position: relative;
   display: inline-block;
 }
-
 
 .dropdown {
   position: relative;
@@ -274,8 +266,9 @@ a.Username {
   border-width: 2px 2px 2px 2px;
   border-radius: 8px;
   font-size: 28px;
-font-family: 'Times New Roman', Times, serif;  padding: 10px;
-  color: #FF4E8E;
+  font-family: 'Times New Roman', Times, serif;
+  padding: 10px;
+  color: #ff4e8e;
   background-color: #616161;
   text-decoration: none;
   font-weight: bold;
@@ -308,24 +301,23 @@ font-family: 'Times New Roman', Times, serif;  padding: 10px;
   z-index: 1;
   left: 0;
   margin-top: 10px;
-  border:solid #616161;
+  border: solid #616161;
   border-radius: 8px;
-  
 }
+
 .dropdown.open .dropdown-content {
   display: block;
-  
 }
 
 .dropdown-content a {
-  color: #FF4E8E;
+  color: #ff4e8e;
   text-decoration: none;
   display: block;
   margin-top: 5px;
 }
 
 .dropdown-content a:hover {
-  background-color: #2EFFB6;
+  background-color: #2effb6;
   text-underline-offset: 5px;
   text-decoration: underline;
 }
@@ -333,6 +325,8 @@ font-family: 'Times New Roman', Times, serif;  padding: 10px;
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+/* Navbar Styles */
 
 .Navbar {
   display: flex;
@@ -346,9 +340,8 @@ font-family: 'Times New Roman', Times, serif;  padding: 10px;
 }
 
 @media (max-width: 768px) {
-
-  /* Styles for screens smaller than 768px */
   .Navbar {
+    /* Styles for screens smaller than 768px */
     flex-direction: column;
     align-items: flex-start;
     padding: 10px;
@@ -367,23 +360,21 @@ font-family: 'Times New Roman', Times, serif;  padding: 10px;
   border-radius: 8px;
   font-size: 18px;
   padding: 10px;
-  color: #FF4E8E;
+  color: #ff4e8e;
   background-color: #616161;
   text-decoration: none;
 }
 
 @media (max-width: 700px) {
-  .navbar-link{
+  .navbar-link {
     font-size: 14px;
   }
 }
 
 .navbar-link:hover {
-  background-color: #2EFFB6;
+  background-color: #2effb6;
   text-underline-offset: 5px;
   text-decoration: underline;
-
-
 }
 
 .break {
@@ -393,25 +384,12 @@ font-family: 'Times New Roman', Times, serif;  padding: 10px;
   border-style: none;
 }
 
-.title {
-  justify-content: center;
-  text-align: center;
-  color: rgb(0, 0, 0);
-  font-size: 60px;
-  width: 60%;
-  margin: 0 auto;
-  max-width: 100%;
-  display: block;
-}
-
-
-/* body of page */
+/* Page Body Styles */
 
 h1 {
   margin-bottom: 0px;
   text-align: center;
 }
-
 
 .card {
   display: flex;
@@ -428,8 +406,6 @@ h1 {
   background-color: #616161;
 }
 
-
-/* card styling */
 .card img {
   max-width: 100%;
   border: 1px solid #616161;
@@ -463,55 +439,7 @@ h1 {
   /* Add margin to create space between the buttons */
 }
 
-.SoleSurvivorLike{
-  font-weight: bold;
-}
-
-
-
-.BuyShoe {
-  border: solid black;
-  border-width: 2px 2px 2px 2px;
-  border-radius: 8px;
-  font-size: 18px;
-  padding: 10px;
-  color: #FF4E8E;
-  background-color: #616161;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.BuyShoe:hover {
-  background-color: #2EFFB6;
-  text-underline-offset: 5px;
-  text-decoration: underline;
-}
-
-
-.RemoveShoe{
-  border: solid black;
-  border-width: 2px 2px 2px 2px;
-  border-radius: 8px;
-  font-size: 18px;
-  padding: 10px;
-  color: #FF4E8E;
-  background-color: #616161;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-
-.RemoveShoe:hover{
-  color: white;
-  background-color: #FF4E8E;
-  text-underline-offset: 5px;
-  text-decoration: underline;
-
-}
-
-.PageMotto{
-  font-size: 48px;
-}
+/* Specific Page Styles */
 
 .PageMotto {
   font-size: 48px;
@@ -538,7 +466,7 @@ h1 {
   }
 }
 
-.currentShoe{
+.currentShoe {
   font-size: 48px;
 }
 
@@ -589,13 +517,11 @@ h1 {
   }
 }
 
-
-
-
 .like-count {
   font-size: 36px;
   font-weight: bold;
 }
+
 @media (max-width: 1500px) {
   .like-count {
     /* Adjust the font size for the specific media query if needed */
@@ -617,7 +543,6 @@ h1 {
   }
 }
 
-
 .Love {
   margin: 0 20px;
   border: solid black;
@@ -632,7 +557,7 @@ h1 {
 
 .Love:hover {
   color: white;
-  background-color: #2EFFB6;
+  background-color: #2effb6;
 }
 
 .Hate {
@@ -642,21 +567,53 @@ h1 {
   border-radius: 8px;
   font-size: 30px;
   padding: 10px;
-  color: #FF4E8E;
+  color: #ff4e8e;
   background-color: #616161;
   text-underline-offset: 5px;
 }
 
 .Hate:hover {
   color: white;
-  background-color: #FF4E8E;
+  background-color: #ff4e8e;
 }
 
-/* Social Footer Style */
+.RemoveShoe{
+  background-color: #616161;
+    border: 2px solid #000;
+    border-radius: 8px;
+    color: #ff4e8e;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 10px;
+    text-decoration: none;
+}
+.RemoveShoe:hover{
+  color: white;
+  background-color: #ff4e8e;
+}
+
+.BuyShoe{
+  background-color: #616161;
+  border: 2px solid #000;
+  border-radius: 8px;
+  color: #ff4e8e;
+  font-size: 18px;
+  padding: 10px;
+  text-decoration: none;
+}
+
+.BuyShoe:hover{
+  color: white;
+  background-color: #2effb6;
+}
+/* Social Footer Styles */
 
 .h4 {
   justify-content: center;
+}
 
+h2{
+  text-align: center;
 }
 
 .social-container {
@@ -668,10 +625,9 @@ h1 {
   flex-direction: column;
   align-items: center;
   background-color: #616161;
-margin-top: 50px;
-padding-left: ;
-opacity: 0;
-transition: 0.5s;
+  margin-top: 50px;
+  opacity: 0;
+  transition: 0.5s;
 }
 
 .social-container.active {
@@ -681,14 +637,16 @@ transition: 0.5s;
 .social-container.fade-transition {
   transition-duration: 0s;
 }
+
 .follow-text {
   text-align: center;
   color: #141414;
   font-size: 24px;
   margin-bottom: 10px;
 }
+
 @media (max-width: 1024px) {
-  .follow-text{
+  .follow-text {
     font-size: 26px;
   }
 }
@@ -700,7 +658,7 @@ transition: 0.5s;
 }
 
 @media (max-width: 479px) {
-  .follow-text{
+  .follow-text {
     font-size: 20px;
   }
 }
@@ -711,20 +669,23 @@ transition: 0.5s;
   align-items: flex-end;
   margin-top: 10px;
 }
+
 @media (max-width: 1000px) {
   .social-icons a {
     font-size: 20px; /* Adjust the font size for screens smaller than 768px */
   }
 }
+
 @media (max-width: 767px) {
   .social-icons a {
     font-size: 16px; /* Adjust the font size for screens smaller than 768px */
   }
 }
-  @media (max-width: 500px) {
-    .social-icons a {
-      font-size: 10px; /* Adjust the font size for screens smaller than 768px */
-    }
+
+@media (max-width: 500px) {
+  .social-icons a {
+    font-size: 10px; /* Adjust the font size for screens smaller than 768px */
+  }
 }
 
 .social {
@@ -734,6 +695,7 @@ transition: 0.5s;
   text-align: center;
   display: inline-block;
 }
+
 @media (max-width: 500px) {
   .social {
     margin: 0 1rem;
@@ -760,8 +722,7 @@ transition: 0.5s;
   color: black;
 }
 
-
-/*  */
+/* Responsive Styles */
 
 @media (max-width: 767px) {
   .Header {
@@ -782,11 +743,12 @@ transition: 0.5s;
     margin-top: 10px;
     width: 80%;
   }
-.form-input{
-  font-size: 30px;
-}
 
-  .form-submit{
+  .form-input {
+    font-size: 30px;
+  }
+
+  .form-submit {
     font-size: 30px;
   }
 }
@@ -801,17 +763,19 @@ transition: 0.5s;
     width: 90%;
   }
 
-  .form-title{
+  .form-title {
     padding-bottom: 0px;
   }
 
   .form-div {
     gap: 3rem;
   }
-  .form-input{
+
+  .form-input {
     font-size: 24px;
   }
-  .form-submit{
+
+  .form-submit {
     font-size: 24px;
   }
 }
@@ -831,11 +795,10 @@ transition: 0.5s;
   .Username {
     display: none;
   }
-}
-@media (max-width: 1024px) {
-.logo{
-  width: 0%;
-}
+
+  .logo {
+    width: 0%;
+  }
 
   .logo img {
     display: none;
@@ -850,13 +813,25 @@ transition: 0.5s;
 @media (max-width: 768px) {
   .card {
     flex-direction: column;
-    /* Align items and text to the center */
-    align-items: center;
-    text-align: center;
+    /* Align items to the top */
+    justify-content: flex-start;
   }
 }
 
-h2{
-  text-align: center;
-}
+@media (max-width: 479px) {
+  .Navbar {
+    flex-wrap: wrap;
+  }
 
+  .navbar-link {
+    margin: 5px 0;
+  }
+
+  .button-wrapper {
+    flex-direction: column;
+  }
+
+  .button-wrapper button {
+    margin: 5px 0;
+  }
+}
